[package]
name = "run-cat"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/ahaoboy/run-cat"
homepage = "https://github.com/ahaoboy/run-cat"
authors = ["ahaoboy"]
license = "MIT"
description = "A cute running cat animation on your windows taskbar."

[dependencies]
tray-icon = "0.14.3"
image = "0.25.1"
sysinfo = "0.30.12"
winit = "0.29"

[target."cfg(target_os = \"linux\")".dependencies]
libappindicator = "0.9"
dirs = "5"
gtk = "0.18"

[target."cfg(target_os = \"windows\")".build-dependencies]
winres = "0.1"


[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
]

# Publish jobs to run in CI
pr-run-mode = "plan"
