[package]
name = "run-cat"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/ahaoboy/run-cat"
homepage = "https://github.com/ahaoboy/run-cat"
authors = ["ahaoboy"]
license = "MIT"
description = "A cute running cat animation on your windows taskbar."

[dependencies]
tray-icon = "0.14.3"
image = "0.25.1"
sysinfo = "0.30.12"
anyhow="*"
# TODO: update to 0.30
winit = "0.29"


[target."cfg(target_os = \"linux\")".dependencies]
libappindicator = "0.9"
dirs = "5"
gtk = "0.18"

[target."cfg(target_os = \"windows\")".build-dependencies]
winres = "0.1"
